apps/sublime/bora-lite-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sublime-bora-lite
  namespace: sublime
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sublime-bora-lite
  template:
    metadata:
      labels:
        app: sublime-bora-lite
    spec:
      containers:
      - name: bora-lite
        image: sublimesec/bora-lite:1.66
        volumeMounts:
        - name: persistent-storage
          mountPath: /data/persistent_storage
      volumes:
      - name: persistent-storage
        persistentVolumeClaim:
          claimName: sublime-persistent-pvc
