apps/sublime/mantis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sublime-mantis
  namespace: sublime
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sublime-mantis
  template:
    metadata:
      labels:
        app: sublime-mantis
    spec:
      containers:
      - name: mantis
        image: sublimesec/mantis:1.66
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: persistent-storage
          mountPath: /data/persistent_storage
      volumes:
      - name: persistent-storage
        persistentVolumeClaim:
          claimName: sublime-persistent-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: sublime-mantis
  namespace: sublime
spec:
  selector:
    app: sublime-mantis
  ports:
  - port: 8000
    targetPort: 8000
