apps/sublime/minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sublimes3
  namespace: sublime
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sublimes3
  template:
    metadata:
      labels:
        app: sublimes3
    spec:
      containers:
      - name: minio
        image: minio/minio
        args:
        - server
        - --address
        - "0.0.0.0:8110"
        - --console-address
        - "0.0.0.0:8111"
        - /data
        ports:
        - containerPort: 8110
          name: api
        - containerPort: 8111
          name: console
        volumeMounts:
        - name: s3-storage
          mountPath: /data
      volumes:
      - name: s3-storage
        persistentVolumeClaim:
          claimName: sublime-s3-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: sublimes3
  namespace: sublime
spec:
  selector:
    app: sublimes3
  ports:
  - port: 8110
    targetPort: 8110
    name: api
  - port: 8111
    targetPort: 8111
    name: console
