apps/sublime/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sublime-postgres
  namespace: sublime
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sublime-postgres
  template:
    metadata:
      labels:
        app: sublime-postgres
    spec:
      containers:
      - name: postgres
        image: postgres:13.2
        args: ["-c", "max_connections=200"]
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /data/postgres
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: sublime-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: sublime-postgres
  namespace: sublime
spec:
  selector:
    app: sublime-postgres
  ports:
  - port: 5432
    targetPort: 5432
