apps/sublime/screenshot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sublime-screenshot-service
  namespace: sublime
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sublime-screenshot-service
  template:
    metadata:
      labels:
        app: sublime-screenshot-service
    spec:
      containers:
      - name: screenshot-service
        image: sublimesec/render-email-html:0.2
        ports:
        - containerPort: 8100
---
apiVersion: v1
kind: Service
metadata:
  name: sublime-screenshot-service
  namespace: sublime
spec:
  selector:
    app: sublime-screenshot-service
  ports:
  - port: 8100
    targetPort: 8100
