apps/sublime/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sublime-dashboard
  namespace: sublime
  annotations:
    # traefik.ingress.kubernetes.io/router.middlewares: traefik-authentik-forward-auth@kubernetescrd
    external-dns.alpha.kubernetes.io/hostname: sublime.phin3has.me
    external-dns.alpha.kubernetes.io/target: 54e08de2-5664-48f1-8fa4-26580666989f.cfargotunnel.com
spec:
  ingressClassName: traefik
  rules:
  - host: sublime.phin3has.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sublime-dashboard
            port:
              number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sublime-api
  namespace: sublime
  annotations:
    # traefik.ingress.kubernetes.io/router.middlewares: traefik-authentik-forward-auth@kubernetescrd
    external-dns.alpha.kubernetes.io/hostname: sublime-api.phin3has.me
    external-dns.alpha.kubernetes.io/target: 54e08de2-5664-48f1-8fa4-26580666989f.cfargotunnel.com
spec:
  ingressClassName: traefik
  rules:
  - host: sublime-api.phin3has.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sublime-mantis
            port:
              number: 8000
